src/haskell/ParGarpezpp.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.19.12 from ParGarpezpp.y
-----------------------------------------------------------------------------

state 72 contains 1 shift/reduce conflicts.
state 203 contains 1 shift/reduce conflicts.

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pProgram -> Program                         (0)
	Ident -> L_ident                                   (1)
	Char -> L_charac                                   (2)
	Integer -> L_integ                                 (3)
	Double -> L_doubl                                  (4)
	String -> L_quoted                                 (5)
	Boolean -> L_Boolean                               (6)
	Program -> ListFDecl                               (7)
	FDecl -> RType Ident '(' ListParam ')' Block       (8)
	Param -> Type PassBy Ident                         (9)
	PassBy ->                                          (10)
	PassBy -> '&'                                      (11)
	DList -> Type ListVDecl ';'                        (12)
	DList -> 'const' ListCDecl ';'                     (13)
	VDecl -> Ident                                     (14)
	VDecl -> Ident '=' RExp                            (15)
	CDecl -> Ident '=' RExp                            (16)
	Type -> Basic Compound                             (17)
	Compound ->                                        (18)
	Compound -> '[' RExp ']' Compound                  (19)
	Compound -> '*' Compound                           (20)
	Basic -> 'bool'                                    (21)
	Basic -> 'char'                                    (22)
	Basic -> 'int'                                     (23)
	Basic -> 'float'                                   (24)
	Basic -> 'string'                                  (25)
	RType -> Basic                                     (26)
	RType -> Type '&'                                  (27)
	Block -> '{' ListDList ListStm '}'                 (28)
	Stm -> Block                                       (29)
	Stm -> Ident '(' ListRExp ')' ';'                  (30)
	Stm -> PWrite '(' RExp ')' ';'                     (31)
	Stm -> LExp AssignOp RExp ';'                      (32)
	Stm -> LExp ';'                                    (33)
	Stm -> 'if' '(' RExp ')' Stm                       (34)
	Stm -> 'if' '(' RExp ')' Stm 'else' Stm            (35)
	Stm -> 'while' '(' RExp ')' Stm                    (36)
	Stm -> 'do' Stm 'while' '(' RExp ')' ';'           (37)
	Stm -> 'for' '(' Ident '=' RExp Dir RExp ')' Stm   (38)
	Stm -> Jump ';'                                    (39)
	Dir -> 'upto'                                      (40)
	Dir -> 'downto'                                    (41)
	Jump -> 'return'                                   (42)
	Jump -> 'return' RExp                              (43)
	Jump -> 'break'                                    (44)
	Jump -> 'continue'                                 (45)
	LExp -> LExp1                                      (46)
	LExp -> '*' LExp1                                  (47)
	LExp1 -> LExp2                                     (48)
	LExp1 -> LExp2 IncDecOp                            (49)
	LExp2 -> LExp3                                     (50)
	LExp2 -> IncDecOp LExp3                            (51)
	LExp3 -> LExp4                                     (52)
	LExp3 -> LExp3 '[' RExp ']'                        (53)
	LExp4 -> '(' LExp ')'                              (54)
	LExp4 -> Ident                                     (55)
	RExp -> RExp1                                      (56)
	RExp -> RExp '||' RExp1                            (57)
	RExp1 -> RExp2                                     (58)
	RExp1 -> RExp1 '&&' RExp2                          (59)
	RExp2 -> RExp3                                     (60)
	RExp2 -> '!' RExp3                                 (61)
	RExp3 -> RExp4                                     (62)
	RExp3 -> RExp3 CompOp RExp4                        (63)
	RExp4 -> RExp5                                     (64)
	RExp4 -> RExp4 '+' RExp5                           (65)
	RExp4 -> RExp4 '-' RExp5                           (66)
	RExp5 -> RExp6                                     (67)
	RExp5 -> RExp5 '*' RExp6                           (68)
	RExp5 -> RExp5 '/' RExp6                           (69)
	RExp5 -> RExp5 '%' RExp6                           (70)
	RExp6 -> RExp7                                     (71)
	RExp6 -> RExp7 '^' RExp6                           (72)
	RExp7 -> RExp8                                     (73)
	RExp7 -> SignOp RExp8                              (74)
	RExp7 -> '&' LExp                                  (75)
	RExp8 -> RExp9                                     (76)
	RExp8 -> LExp                                      (77)
	RExp9 -> RExp10                                    (78)
	RExp9 -> Ident '(' ListRExp ')'                    (79)
	RExp9 -> PRead '(' ')'                             (80)
	RExp10 -> '(' RExp ')'                             (81)
	RExp10 -> Literal                                  (82)
	PRead -> 'readChar'                                (83)
	PRead -> 'readInt'                                 (84)
	PRead -> 'readFloat'                               (85)
	PRead -> 'readString'                              (86)
	PWrite -> 'writeChar'                              (87)
	PWrite -> 'writeInt'                               (88)
	PWrite -> 'writeFloat'                             (89)
	PWrite -> 'writeString'                            (90)
	AssignOp -> '='                                    (91)
	AssignOp -> '+='                                   (92)
	AssignOp -> '-='                                   (93)
	AssignOp -> '*='                                   (94)
	AssignOp -> '/='                                   (95)
	AssignOp -> '%='                                   (96)
	AssignOp -> '^='                                   (97)
	AssignOp -> '&='                                   (98)
	AssignOp -> '|='                                   (99)
	CompOp -> '<'                                      (100)
	CompOp -> '<='                                     (101)
	CompOp -> '=='                                     (102)
	CompOp -> '!='                                     (103)
	CompOp -> '>='                                     (104)
	CompOp -> '>'                                      (105)
	IncDecOp -> '++'                                   (106)
	IncDecOp -> '--'                                   (107)
	SignOp -> '+'                                      (108)
	SignOp -> '-'                                      (109)
	Literal -> Boolean                                 (110)
	Literal -> Char                                    (111)
	Literal -> Integer                                 (112)
	Literal -> Double                                  (113)
	Literal -> String                                  (114)
	ListParam ->                                       (115)
	ListParam -> Param                                 (116)
	ListParam -> Param ',' ListParam                   (117)
	ListFDecl -> FDecl                                 (118)
	ListFDecl -> FDecl ListFDecl                       (119)
	ListVDecl -> VDecl                                 (120)
	ListVDecl -> VDecl ',' ListVDecl                   (121)
	ListCDecl -> CDecl                                 (122)
	ListCDecl -> CDecl ',' ListCDecl                   (123)
	ListDList ->                                       (124)
	ListDList -> ListDList DList                       (125)
	ListStm ->                                         (126)
	ListStm -> ListStm Stm                             (127)
	ListRExp -> RExp                                   (128)
	ListRExp -> RExp ',' ListRExp                      (129)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'!'            { PT _ (TS _ 1) }
	'!='           { PT _ (TS _ 2) }
	'%'            { PT _ (TS _ 3) }
	'%='           { PT _ (TS _ 4) }
	'&'            { PT _ (TS _ 5) }
	'&&'           { PT _ (TS _ 6) }
	'&='           { PT _ (TS _ 7) }
	'('            { PT _ (TS _ 8) }
	')'            { PT _ (TS _ 9) }
	'*'            { PT _ (TS _ 10) }
	'*='           { PT _ (TS _ 11) }
	'+'            { PT _ (TS _ 12) }
	'++'           { PT _ (TS _ 13) }
	'+='           { PT _ (TS _ 14) }
	','            { PT _ (TS _ 15) }
	'-'            { PT _ (TS _ 16) }
	'--'           { PT _ (TS _ 17) }
	'-='           { PT _ (TS _ 18) }
	'/'            { PT _ (TS _ 19) }
	'/='           { PT _ (TS _ 20) }
	';'            { PT _ (TS _ 21) }
	'<'            { PT _ (TS _ 22) }
	'<='           { PT _ (TS _ 23) }
	'='            { PT _ (TS _ 24) }
	'=='           { PT _ (TS _ 25) }
	'>'            { PT _ (TS _ 26) }
	'>='           { PT _ (TS _ 27) }
	'['            { PT _ (TS _ 28) }
	']'            { PT _ (TS _ 29) }
	'^'            { PT _ (TS _ 30) }
	'^='           { PT _ (TS _ 31) }
	'bool'         { PT _ (TS _ 32) }
	'break'        { PT _ (TS _ 33) }
	'char'         { PT _ (TS _ 34) }
	'const'        { PT _ (TS _ 35) }
	'continue'     { PT _ (TS _ 36) }
	'do'           { PT _ (TS _ 37) }
	'downto'       { PT _ (TS _ 38) }
	'else'         { PT _ (TS _ 39) }
	'float'        { PT _ (TS _ 40) }
	'for'          { PT _ (TS _ 41) }
	'if'           { PT _ (TS _ 42) }
	'int'          { PT _ (TS _ 43) }
	'readChar'     { PT _ (TS _ 44) }
	'readFloat'    { PT _ (TS _ 45) }
	'readInt'      { PT _ (TS _ 46) }
	'readString'   { PT _ (TS _ 47) }
	'return'       { PT _ (TS _ 48) }
	'string'       { PT _ (TS _ 49) }
	'upto'         { PT _ (TS _ 50) }
	'while'        { PT _ (TS _ 51) }
	'writeChar'    { PT _ (TS _ 52) }
	'writeFloat'   { PT _ (TS _ 53) }
	'writeInt'     { PT _ (TS _ 54) }
	'writeString'  { PT _ (TS _ 55) }
	'{'            { PT _ (TS _ 56) }
	'|='           { PT _ (TS _ 57) }
	'||'           { PT _ (TS _ 58) }
	'}'            { PT _ (TS _ 59) }
	L_ident        { PT _ (TV $$) }
	L_charac       { PT _ (TC $$) }
	L_integ        { PT _ (TI $$) }
	L_doubl        { PT _ (TD $$) }
	L_quoted       { PT _ (TL $$) }
	L_Boolean      { PT _ (T_Boolean $$) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pProgram rule  0
	Ident           rule  1
	Char            rule  2
	Integer         rule  3
	Double          rule  4
	String          rule  5
	Boolean         rule  6
	Program         rule  7
	FDecl           rule  8
	Param           rule  9
	PassBy          rules 10, 11
	DList           rules 12, 13
	VDecl           rules 14, 15
	CDecl           rule  16
	Type            rule  17
	Compound        rules 18, 19, 20
	Basic           rules 21, 22, 23, 24, 25
	RType           rules 26, 27
	Block           rule  28
	Stm             rules 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39
	Dir             rules 40, 41
	Jump            rules 42, 43, 44, 45
	LExp            rules 46, 47
	LExp1           rules 48, 49
	LExp2           rules 50, 51
	LExp3           rules 52, 53
	LExp4           rules 54, 55
	RExp            rules 56, 57
	RExp1           rules 58, 59
	RExp2           rules 60, 61
	RExp3           rules 62, 63
	RExp4           rules 64, 65, 66
	RExp5           rules 67, 68, 69, 70
	RExp6           rules 71, 72
	RExp7           rules 73, 74, 75
	RExp8           rules 76, 77
	RExp9           rules 78, 79, 80
	RExp10          rules 81, 82
	PRead           rules 83, 84, 85, 86
	PWrite          rules 87, 88, 89, 90
	AssignOp        rules 91, 92, 93, 94, 95, 96, 97, 98, 99
	CompOp          rules 100, 101, 102, 103, 104, 105
	IncDecOp        rules 106, 107
	SignOp          rules 108, 109
	Literal         rules 110, 111, 112, 113, 114
	ListParam       rules 115, 116, 117
	ListFDecl       rules 118, 119
	ListVDecl       rules 120, 121
	ListCDecl       rules 122, 123
	ListDList       rules 124, 125
	ListStm         rules 126, 127
	ListRExp        rules 128, 129

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0


	'bool'         shift, and enter state 9
	'char'         shift, and enter state 10
	'float'        shift, and enter state 11
	'int'          shift, and enter state 12
	'string'       shift, and enter state 13

	Program        goto state 3
	FDecl          goto state 4
	Type           goto state 5
	Basic          goto state 6
	RType          goto state 7
	ListFDecl      goto state 8

State 1


	L_ident        shift, and enter state 2


State 2

	Ident -> L_ident .                                  (rule 1)

	'!='           reduce using rule 1
	'%'            reduce using rule 1
	'%='           reduce using rule 1
	'&&'           reduce using rule 1
	'&='           reduce using rule 1
	'('            reduce using rule 1
	')'            reduce using rule 1
	'*'            reduce using rule 1
	'*='           reduce using rule 1
	'+'            reduce using rule 1
	'++'           reduce using rule 1
	'+='           reduce using rule 1
	','            reduce using rule 1
	'-'            reduce using rule 1
	'--'           reduce using rule 1
	'-='           reduce using rule 1
	'/'            reduce using rule 1
	'/='           reduce using rule 1
	';'            reduce using rule 1
	'<'            reduce using rule 1
	'<='           reduce using rule 1
	'='            reduce using rule 1
	'=='           reduce using rule 1
	'>'            reduce using rule 1
	'>='           reduce using rule 1
	'['            reduce using rule 1
	']'            reduce using rule 1
	'^'            reduce using rule 1
	'^='           reduce using rule 1
	'downto'       reduce using rule 1
	'upto'         reduce using rule 1
	'|='           reduce using rule 1
	'||'           reduce using rule 1


State 3

	%start_pProgram -> Program .                        (rule 0)

	%eof           accept


State 4

	ListFDecl -> FDecl .                                (rule 118)
	ListFDecl -> FDecl . ListFDecl                      (rule 119)

	'bool'         shift, and enter state 9
	'char'         shift, and enter state 10
	'float'        shift, and enter state 11
	'int'          shift, and enter state 12
	'string'       shift, and enter state 13
	%eof           reduce using rule 118

	FDecl          goto state 4
	Type           goto state 5
	Basic          goto state 6
	RType          goto state 7
	ListFDecl      goto state 19

State 5

	RType -> Type . '&'                                 (rule 27)

	'&'            shift, and enter state 18


State 6

	Type -> Basic . Compound                            (rule 17)
	RType -> Basic .                                    (rule 26)

	'&'            reduce using rule 18
	'*'            shift, and enter state 16
	'['            shift, and enter state 17
	L_ident        reduce using rule 26

	Compound       goto state 15

State 7

	FDecl -> RType . Ident '(' ListParam ')' Block      (rule 8)

	L_ident        shift, and enter state 2

	Ident          goto state 14

State 8

	Program -> ListFDecl .                              (rule 7)

	%eof           reduce using rule 7


State 9

	Basic -> 'bool' .                                   (rule 21)

	'&'            reduce using rule 21
	'*'            reduce using rule 21
	'['            reduce using rule 21
	L_ident        reduce using rule 21


State 10

	Basic -> 'char' .                                   (rule 22)

	'&'            reduce using rule 22
	'*'            reduce using rule 22
	'['            reduce using rule 22
	L_ident        reduce using rule 22


State 11

	Basic -> 'float' .                                  (rule 24)

	'&'            reduce using rule 24
	'*'            reduce using rule 24
	'['            reduce using rule 24
	L_ident        reduce using rule 24


State 12

	Basic -> 'int' .                                    (rule 23)

	'&'            reduce using rule 23
	'*'            reduce using rule 23
	'['            reduce using rule 23
	L_ident        reduce using rule 23


State 13

	Basic -> 'string' .                                 (rule 25)

	'&'            reduce using rule 25
	'*'            reduce using rule 25
	'['            reduce using rule 25
	L_ident        reduce using rule 25


State 14

	FDecl -> RType Ident . '(' ListParam ')' Block      (rule 8)

	'('            shift, and enter state 64


State 15

	Type -> Basic Compound .                            (rule 17)

	'&'            reduce using rule 17
	L_ident        reduce using rule 17


State 16

	Compound -> '*' . Compound                          (rule 20)

	'&'            reduce using rule 18
	'*'            shift, and enter state 16
	'['            shift, and enter state 17
	L_ident        reduce using rule 18

	Compound       goto state 63

State 17

	Compound -> '[' . RExp ']' Compound                 (rule 19)

	'!'            shift, and enter state 46
	'&'            shift, and enter state 47
	'('            shift, and enter state 48
	'*'            shift, and enter state 49
	'+'            shift, and enter state 50
	'++'           shift, and enter state 51
	'-'            shift, and enter state 52
	'--'           shift, and enter state 53
	'readChar'     shift, and enter state 54
	'readFloat'    shift, and enter state 55
	'readInt'      shift, and enter state 56
	'readString'   shift, and enter state 57
	L_ident        shift, and enter state 2
	L_charac       shift, and enter state 58
	L_integ        shift, and enter state 59
	L_doubl        shift, and enter state 60
	L_quoted       shift, and enter state 61
	L_Boolean      shift, and enter state 62

	Ident          goto state 20
	Char           goto state 21
	Integer        goto state 22
	Double         goto state 23
	String         goto state 24
	Boolean        goto state 25
	LExp           goto state 26
	LExp1          goto state 27
	LExp2          goto state 28
	LExp3          goto state 29
	LExp4          goto state 30
	RExp           goto state 31
	RExp1          goto state 32
	RExp2          goto state 33
	RExp3          goto state 34
	RExp4          goto state 35
	RExp5          goto state 36
	RExp6          goto state 37
	RExp7          goto state 38
	RExp8          goto state 39
	RExp9          goto state 40
	RExp10         goto state 41
	PRead          goto state 42
	IncDecOp       goto state 43
	SignOp         goto state 44
	Literal        goto state 45

State 18

	RType -> Type '&' .                                 (rule 27)

	L_ident        reduce using rule 27


State 19

	ListFDecl -> FDecl ListFDecl .                      (rule 119)

	%eof           reduce using rule 119


State 20

	LExp4 -> Ident .                                    (rule 55)
	RExp9 -> Ident . '(' ListRExp ')'                   (rule 79)

	'!='           reduce using rule 55
	'%'            reduce using rule 55
	'&&'           reduce using rule 55
	'('            shift, and enter state 97
	')'            reduce using rule 55
	'*'            reduce using rule 55
	'+'            reduce using rule 55
	'++'           reduce using rule 55
	','            reduce using rule 55
	'-'            reduce using rule 55
	'--'           reduce using rule 55
	'/'            reduce using rule 55
	';'            reduce using rule 55
	'<'            reduce using rule 55
	'<='           reduce using rule 55
	'=='           reduce using rule 55
	'>'            reduce using rule 55
	'>='           reduce using rule 55
	'['            reduce using rule 55
	']'            reduce using rule 55
	'^'            reduce using rule 55
	'downto'       reduce using rule 55
	'upto'         reduce using rule 55
	'||'           reduce using rule 55


State 21

	Literal -> Char .                                   (rule 111)

	'!='           reduce using rule 111
	'%'            reduce using rule 111
	'&&'           reduce using rule 111
	')'            reduce using rule 111
	'*'            reduce using rule 111
	'+'            reduce using rule 111
	','            reduce using rule 111
	'-'            reduce using rule 111
	'/'            reduce using rule 111
	';'            reduce using rule 111
	'<'            reduce using rule 111
	'<='           reduce using rule 111
	'=='           reduce using rule 111
	'>'            reduce using rule 111
	'>='           reduce using rule 111
	']'            reduce using rule 111
	'^'            reduce using rule 111
	'downto'       reduce using rule 111
	'upto'         reduce using rule 111
	'||'           reduce using rule 111


State 22

	Literal -> Integer .                                (rule 112)

	'!='           reduce using rule 112
	'%'            reduce using rule 112
	'&&'           reduce using rule 112
	')'            reduce using rule 112
	'*'            reduce using rule 112
	'+'            reduce using rule 112
	','            reduce using rule 112
	'-'            reduce using rule 112
	'/'            reduce using rule 112
	';'            reduce using rule 112
	'<'            reduce using rule 112
	'<='           reduce using rule 112
	'=='           reduce using rule 112
	'>'            reduce using rule 112
	'>='           reduce using rule 112
	']'            reduce using rule 112
	'^'            reduce using rule 112
	'downto'       reduce using rule 112
	'upto'         reduce using rule 112
	'||'           reduce using rule 112


State 23

	Literal -> Double .                                 (rule 113)

	'!='           reduce using rule 113
	'%'            reduce using rule 113
	'&&'           reduce using rule 113
	')'            reduce using rule 113
	'*'            reduce using rule 113
	'+'            reduce using rule 113
	','            reduce using rule 113
	'-'            reduce using rule 113
	'/'            reduce using rule 113
	';'            reduce using rule 113
	'<'            reduce using rule 113
	'<='           reduce using rule 113
	'=='           reduce using rule 113
	'>'            reduce using rule 113
	'>='           reduce using rule 113
	']'            reduce using rule 113
	'^'            reduce using rule 113
	'downto'       reduce using rule 113
	'upto'         reduce using rule 113
	'||'           reduce using rule 113


State 24

	Literal -> String .                                 (rule 114)

	'!='           reduce using rule 114
	'%'            reduce using rule 114
	'&&'           reduce using rule 114
	')'            reduce using rule 114
	'*'            reduce using rule 114
	'+'            reduce using rule 114
	','            reduce using rule 114
	'-'            reduce using rule 114
	'/'            reduce using rule 114
	';'            reduce using rule 114
	'<'            reduce using rule 114
	'<='           reduce using rule 114
	'=='           reduce using rule 114
	'>'            reduce using rule 114
	'>='           reduce using rule 114
	']'            reduce using rule 114
	'^'            reduce using rule 114
	'downto'       reduce using rule 114
	'upto'         reduce using rule 114
	'||'           reduce using rule 114


State 25

	Literal -> Boolean .                                (rule 110)
